! UX improvements on footer (too much link too little space) -Index.template/Responsive.css ! Dropmenu fixed positions (not very nice but still bit better) -Responsive.css

--- a/Lunarfall/css/index.css
+++ b/Lunarfall/css/index.css
@@ -3735,3 +3735,6 @@ i {
 .fa-google-plus {
 	color: #dd4b39;
 }
+#f_buttons a {
+	margin: 0 0 0 7px;
+}
